--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Bag-Similarity
 
 {{$NEXT}}
+       - code streaming
 
 0.006  2014-08-08 22:46:51 CEST
        - remove default method and croak
