--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Bag-Similarity
 
 {{$NEXT}}
+       - improve test coverage
 
 0.008  2014-08-16 07:43:22 CEST
        - add travis
