--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Bag-Similarity
 
 {{$NEXT}}
+       - badges in pod
 
 0.009  2014-08-16 13:42:55 CEST
        - improve test coverage
