--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Bag-Similarity
 
 {{$NEXT}}
+       - remove n-gram padding, return the unchanged word if shorter
 
 0.012  2014-08-20 09:05:29 CEST
        - pad if length word < n-gram width
