--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Bag-Similarity
 
 {{$NEXT}}
+       - naming internal methods
 
 0.016  2014-10-19 10:27:00 CEST
        - add Overlap
