--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Bag-Similarity
 
 {{$NEXT}}
+       - retry release
 
 0.017  2014-10-19 22:37:27 CEST
        - naming internal methods
